# process-mcp

./: CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  install.sh  release-plz.toml
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml
src/: lib.rs  main.rs
src/collector/: cgroup_link.rs  fd.rs  io.rs  mod.rs  proc.rs  smaps.rs  walk.rs
src/mcp/: mod.rs  process_entry.rs  server.rs  util.rs
src/mcp/tools/: mod.rs  pids_in_cgroup.rs  process_info.rs  process_tree.rs  top_processes.rs
tests/: mcp_server.rs
tests/snapshots/: mcp_server__tool_list_snapshot.snap
