[package]
name = "process-mcp"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/joemckenney/process-mcp"

[lib]
name = "process_mcp"
path = "src/lib.rs"

[[bin]]
name = "process-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
rmcp = { version = "1", features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal"] }

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["yaml"] }
